src/objects/ContractCountryTask__c.object
<CustomObject>
    <description>Reporting Object only</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ContractCountryTasks</relationshipLabel>
        <relationshipName>ContractCountryTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLUR_Contract__c</fullName>
        <label>BLUR Contract?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLUR_Release__c</fullName>
        <label>BLUR Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLUR_Type__c</fullName>
        <label>BLUR Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Phase__c</fullName>
        <label>Contract Phase</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>ContractCountryTasks</relationshipLabel>
        <relationshipName>ContractCountryTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Anticipated__c</fullName>
        <label>Date Anticipated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Required__c</fullName>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <label>Last Refresh</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ContractCountryTask</label>
    <nameField>
        <label>ContractCountryTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractCountryTasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>